--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -7,9 +7,9 @@
         <item>Lista życzeń</item>
         <item>Losuj książkę</item>
         <item>Moja historia</item>
+        <item>FAQ</item>
         <item>Ranking i statystyki</item>
         <item>Ustawienia profilu</item>
-        <item>Wyloguj</item>
     </string-array>
 
     <integer-array name="navigation_drawer_icons">
@@ -19,8 +19,8 @@
         <item>@drawable/ic_favorite_white_36dp</item>
         <item>@drawable/ic_shuffle</item>
         <item>@drawable/ic_date_range_white_36dp</item>
+        <item>@drawable/ic_help_white_36dp</item>
         <item>@drawable/ic_equalizer_white_36dp</item>
         <item>@drawable/ic_account_circle_white_36dp</item>
-        <item>@drawable/ic_exit_to_app_white_36dp</item>
     </integer-array>
 </resources>
