--- a/app/src/main/res/layout/activity_book_panel.xml
+++ b/app/src/main/res/layout/activity_book_panel.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <include
             android:id="@+id/toolbar"
-            layout="@layout/tab_toolbar" />
+            layout="@layout/tab_toolbar"/>
 
         <com.ogaclejapan.smarttablayout.SmartTabLayout
             android:id="@+id/viewpager_tab"
@@ -27,22 +27,22 @@
             android:paddingRight="4dp"
             app:stl_defaultTabTextColor="@android:color/white"
             app:stl_defaultTabTextHorizontalPadding="18dp"
+            app:stl_distributeEvenly="true"
             app:stl_dividerColor="@color/transparent"
             app:stl_dividerThickness="0dp"
             app:stl_indicatorColor="#20000000"
             app:stl_indicatorCornerRadius="18dp"
             app:stl_indicatorGravity="center"
-            app:stl_distributeEvenly="true"
             app:stl_indicatorInterpolation="smart"
             app:stl_indicatorThickness="36dp"
             app:stl_underlineColor="@color/transparent"
-            app:stl_underlineThickness="0dp" />
+            app:stl_underlineThickness="0dp"/>
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/viewpager_tab" />
+            android:layout_below="@id/viewpager_tab"/>
 
     </RelativeLayout>
 
@@ -53,6 +53,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:layout="@layout/fragment_navigation_drawer"
-        tools:layout="@layout/fragment_navigation_drawer" />
+        tools:layout="@layout/fragment_navigation_drawer"/>
 
 </android.support.v4.widget.DrawerLayout>
