--- a/app/src/main/res/layout/fragment_added_books.xml
+++ b/app/src/main/res/layout/fragment_added_books.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/cardview_background">
 
-    <pl.hypeapp.wykopolka.extra.circlerefreshlayout.CircleRefreshLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    <pl.hypeapp.wykopolka.extra.circlerefreshlayout.CircleRefreshLayout
         android:id="@+id/refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -15,7 +17,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/book_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"/>
 
     </pl.hypeapp.wykopolka.extra.circlerefreshlayout.CircleRefreshLayout>
 
